--- a/blog/2024-06-02-mdx-blog-post.mdx
+++ b/blog/2024-06-02-mdx-blog-post.mdx
@@ -1,7 +1,7 @@
 ---
 slug: mdx-blog-post
 title: MDX Blog Post
-authors: [slorber]
+authors: [scarlet]
 tags: [docusaurus]
 ---
 
@@ -18,7 +18,7 @@ Use the power of React to create interactive blog posts.
 For example, use JSX to create an interactive button:
 
 ```js
-<button onClick={() => alert('button clicked!')}>Click me!</button>
+<button onClick={() => alert("button clicked!")}>Click me!</button>
 ```
 
-<button onClick={() => alert('button clicked!')}>Click me!</button>
+<button onClick={() => alert("button clicked!")}>Click me!</button>
